# ecommerce-api

./: .env.plantilla  LICENSE  README.md  app.py  auth.drawio  main.py  pyproject.toml
.github/instructions/: commit_template-instructions.md
config/: engine.py  ext.py
configs/: engine.py  ext.py
docs/: e2e-checkout-after-seed.md  functional-validation-roadmap.md  models-diagram.md
scripts/sql/: seed_test_data.sql
src/: app.py
src/api/v1/: admin.py  auth.py  cart.py  products.py  public.py  stripe.py  users.py
src/config/: engine.py  ext.py
src/crud/: cart_crud.py  idempotency_crud.py  products.py  products_crud.py  refresh_tokens_crud.py  users_crud.py
src/customViews/: admin.py  index.py  users_view.py
src/models/: __init__.py  auth.py  base.py  cart.py  order.py  product.py  products.py  stripe.py  users.py
src/security/: auth.py  creds.py
src/services/: stripe_service.py  webhook_setup.py
src/utils/: funcdb.py
templates/: create.html  index.html  login.html  token.html
tests/: test_api_smoke.py  test_auth.py  test_checkout_flow.py  test_webhook_processor.py
utils/: funcdb.py
