[project]
name = "ecommerce-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Dayron Salazar",email = "dsalazarcazanhas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette-admin[i18n] (>=0.14.1,<0.15.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "starlette-csrf (>=3.0.0,<4.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "cryptography (>=44.0.1,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
