[project]
name = "ecommerce-api"
version = "0.1.0"
description = "E-commerce API with FastAPI"
authors = [
    {name = "Dayron Salazar",email = "dsalazarcazanhas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}

[tool.poetry.dependencies]
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
stripe = "^7.8.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
sqlmodel = "^0.0.24"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
httpx = "^0.25.2"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
