[project]
name = "ecommerce-api"
version = "0.1.0"
description = "E-commerce API with FastAPI"
authors = [
    {name = "Dayron Salazar",email = "dsalazarcazanhas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}

[tool.poetry.dependencies]
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.22"
python-dotenv = "^1.0.0"
stripe = "^7.8.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
sqlmodel = "^0.0.37"
pydantic-settings = "^2.10.1"
pyjwt = "^2.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.3.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
httpx = "^0.28.1"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
